gl31-master/src/test/deca/syntax/valid/sansobjet/primary_expr3.deca
// Description:
//    tests de programme correct syntaxiquement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021
{
    int a = readInt();
    float b = readFloat();
    //Pas dans sans objet
    //boolean c = new boolean();
    //(string)(null);
}
